# mycp

./: CMakeLists.txt  README.md
doc/: README
libtool/: libtool  编译错误解决.txt
samples/: CMakeLists.txt  Makefile.am  Makefile.in  configure  configure.in
samples/DLLTest/: CMakeLists.txt  DLLTest.cpp  Makefile.am  Makefile.in
samples/DLLTestClient/: CMakeLists.txt  DLLTestClient.cpp  Makefile.am  Makefile.in
samples/OpenCommunication/: CMakeLists.txt  Makefile.am  Makefile.in  OpenCommunication.cpp
samples/RestfulTest/: CMakeLists.txt  Makefile.am  Makefile.in  RestfulTest.cpp
samples/cspApp/: CMakeLists.txt  Makefile.am  Makefile.in  cspApp.cpp
samples/cspServlet/: CMakeLists.txt  (+3 more)
src/: CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  README  configure  configure.in
src/CGCBase/: cgcApplication.h  cgcApplication2.h  cgcAttributes.h  cgcCDBCService.h  cgcCommunications.h  cgcCookieInfo.h  cgcHttpRequest.h  cgcHttpResponse.h  cgcLogService.h  cgcParserBase.h  cgcParserHttp.h  cgcParserSotp.h  cgcRequest.h  cgcResponse.h  cgcSeqInfo.h  cgcService.h  cgcServices.h  cgcSession.h  cgcSmartString.h  cgcSotpRequest.h  cgcSotpResponse.h  cgcSystem.h  cgcattachment.h  cgccdbcs.h  cgcmultipart.h  cgcobject.h  cgcparameter.h  cgcrtpobject.h  cgcuploadfile.h  cgcvalueinfo.h
src/CGCClass/: CMakeLists.txt  ModuleItem.h  SotpRtpRoom.h  SotpRtpSession.h  SotpRtpSource.h
src/CGCComms/: CMakeLists.txt  CgcRemoteInfo.h  Makefile.am  Makefile.in  configure  configure.in  ~myconfigure
src/CGCComms/CommRtp/: CommRtpServer.cpp  Makefile.am  Makefile.in
src/CGCComms/CommTcp/: CMakeLists.txt  CommTcpServer.cpp  Makefile.am  Makefile.in
src/CGCComms/CommUdp/: CMakeLists.txt  CommUdpServer.cpp  Makefile.am  Makefile.in
src/CGCComms/proj/MSVC8.0/: CGCCommunications.sln  CommHttpServer.vcproj  CommRtpServer.vcproj  CommTcpServer.vcproj  CommUdpServer.vcproj
src/CGCComms/proj/MSVC9.0/: CGCCommunications.sln  CommRtpServer.vcproj  CommTcpServer.vcproj  CommUdpServer.vcproj
src/CGCLib/: CMakeLists.txt  CgcBaseClient.cpp  CgcBaseClient.h  CgcClientHandler.h  CgcData.h  CgcTcpClient.cpp  CgcTcpClient.h  CgcUdpClient.cpp  CgcUdpClient.h  cgc_sotpclient.h
src/CGCServices/: CMakeLists.txt  Makefile.am  Makefile.in  configure  configure.in  myconfigure
src/CGCServices/Bodb/: BodbService.cpp  CMakeLists.txt  Makefile.am  Makefile.in
src/CGCServices/Configuration/: CMakeLists.txt  ConfigurationService.cpp  Makefile.am  Makefile.in  cgcConfiguration.h
src/CGCServices/DateTime/: CMakeLists.txt  DateTimeService.cpp  Makefile.am  Makefile.in
src/CGCServices/FileSystem/: CMakeLists.txt  FileSystemService.cpp  Makefile.am  Makefile.in
src/CGCServices/Http/: CMakeLists.txt  CgcTcpClient.cpp  CgcTcpClient.h  HttpService.cpp  Makefile.am  Makefile.in  TcpClient.h
src/CGCServices/Namespace/: CMakeLists.txt  Makefile.am  Makefile.in  NamespaceService.cpp  cgcNamespace.h
src/CGCServices/Rtp/: Makefile.am  Makefile.in  RtpService.cpp  cgcRtp.h
src/CGCServices/Sip/: SipService.cpp  cgcSip.h
src/CGCServices/String/: CMakeLists.txt  Makefile.am  Makefile.in  StringService.cpp  aes.h  cgcString.h  md5.h
src/CGCServices/Xml/: CMakeLists.txt  Makefile.am  Makefile.in  XmlService.cpp
src/CGCServices/ado/: AdoService.cpp
src/CGCServices/mysql/: Makefile.am  Makefile.in  MysqlPool.cpp  MysqlPool.h  MysqlService.cpp
src/CGCServices/pg/: Makefile.am  Makefile.in  PGService.cpp
src/CGCServices/pg/db/: pool.c  pool.h  postsink.c  sink.c  sink.h
src/CGCServices/proj/MSVC9.0/: AdoService.vcproj  BodbService.vcproj  CGCServices.sln  ConfigurationService.vcproj  DateTimeService.vcproj  FileSystemService.vcproj  HttpService.vcproj  MysqlService.vcproj  NamespaceService.vcproj  PGService.vcproj  RtpService.vcproj  SipService.vcproj  SqliteService.vcproj  StringService.vcproj  XmlService.vcproj
src/CGCServices/sqlite/: Makefile.am  Makefile.in  SqliteService.cpp
src/CoreModules/: CMakeLists.txt  Makefile.am  Makefile.in  README  configure  configure.in  myconfigure
src/CoreModules/CGCP/: CGCP.cpp  CMakeLists.txt  Makefile.am  Makefile.in  NTService.cpp  NTService.h  SSNTService.h
src/CoreModules/CGCP/CGC/: AppLogInfo.h  CGCApp.cpp  CGCApp.h  DataServiceMgr.h  HttpRequestImpl.h  HttpResponseImpl.cpp  HttpResponseImpl.h  IncludeBase.h  ModuleMgr.cpp  ModuleMgr.h  RequestImpl.h  ResponseImpl.h  SessionMgr.cpp  SessionMgr.h  SotpRequestImpl.h  SotpResponseImpl.cpp  SotpResponseImpl.h  TimerInfo.cpp  TimerInfo.h  XmlParseAllowMethods.h  XmlParseAuths.h  XmlParseAutoUpdate.h  XmlParseCdbcs.h  XmlParseClusters.h  XmlParseDefault.h  XmlParseModules.h  XmlParseParams.h  XmlParseWeb.h
src/CoreModules/LogService/: CMakeLists.txt  LogInfo.h  LogService.cpp  Makefile.am  Makefile.in  XmlParseLogSetting.h  sample.xml
src/CoreModules/ParserHttp/: CMakeLists.txt  Makefile.am  Makefile.in  ParserHttp.cpp
src/CoreModules/ParserSotp/: CMakeLists.txt  Makefile.am  Makefile.in  ParserSotp.cpp
src/CoreModules/SotpClientService/: CMakeLists.txt  Makefile.am  Makefile.in  SotpClientService.cpp
src/CoreModules/proj/MSVC8.0/: CGCP.vcproj  LogService.vcproj  MYCPCore.sln  MYCore.vcproj  ParserHttp.vcproj  ParserSotp.vcproj
src/CoreModules/proj/MSVC9.0/: CGCP.vcproj  LogService.vcproj  MYCPCore.sln  MYCore.vcproj  ParserHttp.vcproj  ParserSotp.vcproj  SotpClientService.vcproj
src/Projects/: CMakeLists.txt  Makefile.am  Makefile.in  NEWS  configure  configure.in
src/Projects/HttpServer/: CMakeLists.txt  CgcTcpClient.h  FileScripts.cpp  FileScripts.h  HttpServer.cpp  Makefile.am  Makefile.in  MycpHttpServer.cpp  MycpHttpServer.h  ScriptItem.cpp  ScriptItem.h  TcpClient.h  VirtualHost.h  XmlParseApps.h  XmlParseDSs.h  XmlParseHosts.h  fastcgi.h  md5.h  pstr.h  tabconst.h
src/Projects/MVCServer/: ExecuteInfo.h  MVCServer.cpp  Makefile.am  Makefile.in  ValidateInfo.h  XmlParseMvc.h  XmlParseStructs.h
src/Projects/proj/MSVC8.0/: HttpServer.vcproj  MVCServer.vcproj  Projects.sln
src/Projects/proj/MSVC9.0/: HttpServer.vcproj  MVCServer.vcproj  Projects.sln
src/proj/Qt/: CGCClass.pro  CGCLib.pro
(+14 files in other folders)
