#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT(CGCServices, 2.0.0, akee.yang@gmail.com)
#AC_CONFIG_SRCDIR(CGCP/CGCP.cpp)
AM_INIT_AUTOMAKE(CGCServices, 2.0.0)

# Checks for programs.
AC_PROG_CXX
AC_PROG_AWK
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB
AC_PROG_LIBTOOL

# Checks for libraries.
# FIXME: Replace `main' with a function in `-lcrypto':
AC_CHECK_LIB([crypto], [main])
# FIXME: Replace `main' with a function in `-ljrtp':
AC_CHECK_LIB([jrtp], [main])
# FIXME: Replace `main' with a function in `-ljthread':
AC_CHECK_LIB([jthread], [main])
# FIXME: Replace `main' with a function in `-lpq':
AC_CHECK_LIB([pq], [main])
# FIXME: Replace `main' with a function in `-lssl':
AC_CHECK_LIB([ssl], [main])

# Checks for header files.
AC_CHECK_HEADERS([arpa/inet.h fcntl.h inttypes.h limits.h malloc.h memory.h netdb.h netinet/in.h stddef.h stdint.h stdlib.h string.h sys/ioctl.h sys/param.h sys/socket.h sys/time.h sys/timeb.h syslog.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_INLINE
AC_TYPE_INT16_T
AC_TYPE_INT32_T
AC_TYPE_INT8_T
AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_TYPE_UINT8_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_MKTIME
AC_FUNC_REALLOC
AC_CHECK_FUNCS([gethostbyname gethostname gettimeofday inet_ntoa memmove memset pow select socket strchr strdup strrchr strtol strtoul uname])

AC_CONFIG_FILES(Bodb/Makefile
                 Configuration/Makefile
                 DateTime/Makefile
                 FileSystem/Makefile
                 Http/Makefile
                 Makefile
                 Namespace/Makefile
                 String/Makefile
                 Xml/Makefile
                 mysql/Makefile
                 pg/Makefile
                 sqlite/Makefile)
AC_OUTPUT
