lib_LTLIBRARIES = libConfigurationService.la
THESOURCES = ConfigurationService.cpp
libConfigurationService_la_SOURCES = $(THESOURCES)

libConfigurationService_la_HEADERS = cgcConfiguration.h

AM_CFLAGS=-fPIC -shared -Wall
AM_CXXFLAGS=-fPIC -shared -Wall

libConfigurationService_ladir = $(includedir)/CGCServices/Configuration
